--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "indico-transpose"
+authors = ["Hadrien G. <knights_of_ni@gmx.com>"]
+description = "Translate Indico's per-user registrations into per-course registrations"
 version = "0.1.0"
 edition = "2021"
+repository = "https://github.com/HadrienG2/indico-transpose"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -9,3 +12,21 @@ edition = "2021"
 clap = { version = "4.5.1", features = ["derive"] }
 csv = "1.3.0"
 serde = { version = "1.0.197", features = ["derive"] }
+
+# The profile that 'cargo dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
+
+# Config for 'cargo dist'
+[workspace.metadata.dist]
+# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
+cargo-dist-version = "0.7.2"
+# CI backends to support
+ci = ["github"]
+# The installers to generate for each app
+installers = ["shell", "powershell"]
+# Target platforms to build apps for (Rust target-triple syntax)
+targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
+# Publish jobs to run in CI
+pr-run-mode = "plan"
