--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "indico-transpose"
 authors = ["Hadrien G. <knights_of_ni@gmx.com>"]
 description = "Translate Indico's per-user registrations into per-course registrations"
-version = "1.0.0"
+version = "1.0.1"
 edition = "2021"
 repository = "https://github.com/HadrienG2/indico-transpose"
 
@@ -11,8 +11,11 @@ repository = "https://github.com/HadrienG2/indico-transpose"
 [dependencies]
 clap = { version = "4.5.1", features = ["derive"] }
 csv = "1.3.0"
+env_logger = "0.11.2"
+log = "0.4.20"
 regex = "1.10.3"
 serde = { version = "1.0.197", features = ["derive"] }
+time = { version = "0.3.34", features = ["parsing", "serde", "macros"] }
 
 # The profile that 'cargo dist' will build with
 [profile.dist]
